not sure how to have tasks fit evenly in content window, but overlap issue is gone.

--- a/app/components/task_list/task_list.less
+++ b/app/components/task_list/task_list.less
@@ -46,20 +46,20 @@ app-task-list {
 
         div.task-list-wrapper {
 
-            padding: 40px;
             background: whitesmoke;
             position: relative; 
             margin-top: 4px;
-            min-height: 25%;
+            height: auto;
 
-            .add-list {
+            i.add-list {
                 position: absolute;
+                z-index: 10;
                 top: 21px;
                 left: 27px;
                 color: rgba(24,24,24,0.16);
                 font-size: 2em;
             }
-            .add-list:hover {
+            i.add-list:hover {
                 color: rgba(24,24,24,1);
             }
 
